[package]
name = "motita"
version = "0.1.0"
authors = ["Joseph Johnson <jwjbadger@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "motita"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-hal = "0.45.2"
atomic_float = "1.1.0"
esp-idf-svc = "0.51.0"

[build-dependencies]
embuild = "0.33"
